[gd_scene load_steps=3 format=3 uid="uid://cx2s2wdi80ifk"]

[ext_resource type="Script" path="res://Scenes/menupausa.gd" id="1_7yk3i"]
[ext_resource type="FontFile" uid="uid://b5whvkatv7faj" path="res://AASIANNINJA.OTF" id="2_8e5jd"]

[node name="Pausa" type="Node2D"]
process_mode = 3
scale = Vector2(1.2, 1.2)
script = ExtResource("1_7yk3i")

[node name="ColorRect" type="ColorRect" parent="."]
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 452.5
offset_top = 285.0
offset_right = 452.5
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0114349, 0.265634, 0.245551, 1)
metadata/_edit_group_ = true

[node name="GameOver" type="Label" parent="ColorRect"]
layout_mode = 2
offset_left = -109.0
offset_top = -109.0
offset_right = 141.0
offset_bottom = -11.0
theme_override_colors/font_color = Color(0, 0, 0, 0.529412)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = -4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("2_8e5jd")
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -48.0
offset_right = 63.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Jugar" type="Button" parent="ColorRect/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Continue"

[node name="Rejugar" type="Button" parent="ColorRect/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Restart"

[node name="Salir" type="Button" parent="ColorRect/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="ColorRect/VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Rejugar" to="." method="_on_rejugar_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
